added group schedule get
